Création des expériences et des formation par le crud

--- a/app/Resources/views/admin/ajouter_personne.html.twig
+++ b/app/Resources/views/admin/ajouter_personne.html.twig
@@ -3,6 +3,8 @@
 {% block contenu %}
 
     {%include':admin:formulaire_personne.html.twig'%}
+    <a href="{{ url('cv_admin_index') }}">Retour</a>
+
 
 {% endblock %}
 
