--- a/app/Resources/views/admin/ajouter_skill.html.twig
+++ b/app/Resources/views/admin/ajouter_skill.html.twig
@@ -3,6 +3,7 @@
 {% block contenu %}
 
     {%include':admin:formulaire_skill.html.twig'%}
+    <a href="{{ url('cv_admin_index') }}">Retour</a>
 
 {% endblock %}
 
