--- a/src/AppBundle/Resources/views/Formation/show.html.twig
+++ b/src/AppBundle/Resources/views/Formation/show.html.twig
@@ -1,6 +1,7 @@
-{% extends "::layout_appbundle.html.twig" %}
+{% extends ":admin:index.html.twig" %}
 
 {% block contenu %}
+    {{   parent() }}
     <h1>Formation</h1>
 
     <table class="record_properties">
