--- a/src/AppBundle/Resources/views/Skill/new.html.twig
+++ b/src/AppBundle/Resources/views/Skill/new.html.twig
@@ -2,13 +2,13 @@
 
 {% block contenu %}
     {{   parent() }}
-    <h1>Formation creation</h1>
+    <h1>Skill creation</h1>
 
     {{ form(form) }}
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('admin_formation') }}">
+        <a href="{{ path('admin_skill') }}">
             Back to the list
         </a>
     </li>
