--- a/app/Resources/views/admin/index.html.twig
+++ b/app/Resources/views/admin/index.html.twig
@@ -4,8 +4,8 @@
 
 <ul>
     <li><a href="{{ url('cv_homepage') }}">Retour au cv</a></li>
-    <li><a href="{{ url('cv_admin_modifier_personne') }}">Personne</a></li>
-    <li><a href="{{ url('cv_admin_ajouter_skill') }}">Skill</a></li>
+    {#<li><a href="{{ url('cv_admin_modifier_personne') }}">Personne</a></li>#}
+    <li><a href="{{ url('admin_skill') }}">Skill</a></li>
     <li><a href="{{ url('admin_experience') }}">Experience</a></li>
     <li><a href="{{ url('admin_formation') }}">Formation</a></li>
 </ul>
