--- a/src/AppBundle/Resources/views/Experience/edit.html.twig
+++ b/src/AppBundle/Resources/views/Experience/edit.html.twig
@@ -1,6 +1,7 @@
-{% extends "::layout_appbundle.html.twig" %}
+{% extends ":admin:index.html.twig" %}
 
 {% block contenu %}
+    {{   parent() }}
     <h1>Experience edit</h1>
 
     {{ form(edit_form) }}
