--- a/src/AppBundle/Resources/views/Formation/index.html.twig
+++ b/src/AppBundle/Resources/views/Formation/index.html.twig
@@ -1,6 +1,7 @@
-{% extends "::layout_appbundle.html.twig" %}
+{% extends ":admin:index.html.twig" %}
 
 {% block contenu %}
+    {{   parent() }}
     <h1>Formation list</h1>
 
     <table class="records_list">
@@ -45,8 +46,5 @@
                 Create a new entry
             </a>
         </li>
-            <li>
-                <a href="{{ url('cv_admin_index') }}">Retour</a>
-            </li>
     </ul>
     {% endblock %}
