--- a/app/Resources/views/Layout.html.twig
+++ b/app/Resources/views/Layout.html.twig
@@ -17,8 +17,13 @@
             <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
 
             <link rel="stylesheet" href="{{ asset("fontello/css/-ontello.css")}}">
-            <link rel="stylesheet" href="{{ asset("bootstrap/css/bootstrap.css")}}">
-            <link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css')}}">
+            {#<link rel="stylesheet" href="{{ asset("bootstrap/css/bootstrap.css")}}">#}
+            {#<link rel="stylesheet" href="{{ asset('bootstrap/css/bootstrap-responsive.css')}}">#}
+
+            <!-- Latest compiled and minified CSS -->
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+
             <link rel="stylesheet" href="{{ asset('css/progressbar.css')}}">
             <link rel="stylesheet" href="{{ asset('css/lightbox.css')}}">
             <link rel="stylesheet" href="{{ asset('css/styles.css')}}">
@@ -30,6 +35,9 @@
     {% block body %}{% endblock %}
     {% block script %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
     {% endblock %}
 </body>
 </html>
