--- a/src/AppBundle/Resources/views/Skill/new.html.twig
+++ b/src/AppBundle/Resources/views/Skill/new.html.twig
@@ -22,41 +22,34 @@
 
 
     {{parent()}}
-    <script  src="{{ asset('js/html.sortable.min.js')}}"></script>
+
+    <script src="https://code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
+
+
     <script type="text/javascript">
         $(document).ready(function () {
 
             $('#personne_skills_skills').sortable({
-                forcePlaceholderSize: true
+                tolerance: 'pointer',
+                revert: 'invalid',
+                placeholder: 'span2 well placeholder tile',
+                forceHelperSize: true,
+                update: function(event, ui){
+                  alert( $(this).sortable('toArray').toString());
+                }
             });
 
-            $('#personne_skills_skills').sortable().bind('sortupdate', function(e, ui) {
-                /*
 
-                 This event is triggered when the user stopped sorting and the DOM position has changed.
 
-                 ui.item contains the current dragged element.
-                 ui.index contains the new index of the dragged element (considering only list items)
-                 ui.oldindex contains the old index of the dragged element (considering only list items)
-                 ui.elementIndex contains the new index of the dragged element (considering all items within sortable)
-                 ui.oldElementIndex contains the old index of the dragged element (considering all items within sortable)
-                 ui.startparent contains the element that the dragged item comes from
-                 ui.endparent contains the element that the dragged item was added to (new parent)
-
-                 */
-                $(ui).find(":input [id*='ordre']").value="testttttt";
-
-                console.log($(ui));
-            });
 
             // On récupère la balise <div> en question qui contient l'attribut « data-prototype » qui nous intéresse.
             var $container = $('#personne_skills_skills');
 
-            console.log($container);
+         // console.log($container);
 
             // On ajoute un lien pour ajouter une nouvelle catégorie
             var $addLink = $('<a href="#" id="add_category" class="btn btn-default">Ajouter un skill</a>');
-            $container.append($addLink);
+            $container.after($addLink);
 
             // On ajoute un nouveau champ à chaque clic sur le lien d'ajout.
             $addLink.click(function (e) {
